@@ -1,6 +1,14 @@
+2005-04-06  Vivek Jain  <jvivek@novell.com>
+
+	**Fixes #74218
+	* calendar/e-cal-backend-exchange-calendar.c
+	(modify_object_with_href):dup the string before assigning the 
+	value returned by icaltimezone_get_tzid. 
+
 2005-04-05  Ahmad Riza H Nst  <ari@160c.afraid.org>
 
 	* configure.in: Added id (Indonesian) to ALL_LINGUAS line.
+
 
 2005-04-05  Vivek Jain  <jvivek@novell.com>
 
